# clover

./: Cargo.toml  README.md  rust-toolchain
modules/claims/: Cargo.toml
modules/claims/src/: ethereum_address.rs  lib.rs  mock.rs  tests.rs
modules/crc20/: Cargo.toml
modules/crc20/src/: lib.rs
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: default_weight.rs  lib.rs
modules/evm-interop/: Cargo.toml
modules/evm-interop/src/: lib.rs  mock.rs  tests.rs
modules/incentives/: Cargo.toml
modules/incentives/src/: lib.rs
modules/reward-pool/: Cargo.toml
modules/reward-pool/src/: lib.rs  mock.rs  tests.rs
modules/traits/: Cargo.toml
modules/traits/src/: account.rs
modules/type-utils/: Cargo.toml
modules/type-utils/src/: lib.rs
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  eth.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: balance.rs  currency.rs  exchange.rs  incentive_pool.rs  lib.rs  pair.rs
runtime/: Cargo.toml
runtime/src/: clover_evm_config.rs  constants.rs  impls.rs  lib.rs  mock.rs  precompiles.rs
runtime/src/weights/: evm_accounts.rs
