[package]
name = 'clover'
authors = ['Clover Network <https://github.com/clover-network>']
build = 'build.rs'
description = 'Clover node'
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'clover'

[dependencies]
clover-primitives = { workspace = true }
clover-runtime = { workspace = true }
clover-rpc = { workspace = true }
futures = { workspace = true }

jsonrpc-core = { workspace = true }
jsonrpc-pubsub = { workspace = true }
structopt = { workspace = true, optional = true }
serde_json = { workspace = true }

pallet-contracts = { workspace = true }
#pallet-contracts-rpc = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { optional = true, workspace = true }
sc-client-api = { workspace = true }
sc-chain-spec = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sp-timestamp = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-consensus-grandpa  = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-service = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-api = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-transaction-pool = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
hex-literal = { workspace = true }
sc-telemetry = { workspace = true }
pallet-evm = { workspace = true }
pallet-ethereum = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-consensus = { workspace = true }
fp-consensus = { workspace = true }
fc-db = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true }
primitive-types = { workspace = true, features = ["rlp", "byteorder"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true }


[features]
default = [ "cli" ]

cli = [
    "sc-cli",
    "structopt",
]
