[package]
name = "clover-primitives"
authors = ['Clover Network <https://github.com/clover-network>']
description = "Clover primitives definitions"
edition = "2018"
license = 'GPL-3.0'
homepage = "https://substrate.dev"
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true, optional = true }
num-traits = { workspace = true }
num-derive= { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
int-enum = { workspace = true }
enum-iterator = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	'num-traits/std',
	"parity-scale-codec/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
]
