[package]
name = "clover-rpc"
authors = ['Clover Network <https://github.com/clover-network>']
version = '0.9.0'
edition = "2018"
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
description = "Runtime API definition required by System RPC extensions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"]  }
sp-std = { workspace = true }
sp-blockchain = { workspace = true }
clover-rpc-runtime-api = { path = "runtime-api" }
serde = { workspace = true, optional = true }
clover-primitives = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
int-enum = { workspace = true }

[features]
default = [ "std" ]
std = [
	"clover-rpc-runtime-api/std",
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
]
