[package]
name = 'clover-runtime'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2021'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clover-crc20 = { path = "../modules/crc20", default-features = false }
smallvec = { workspace = true }
log = { workspace = true }

clover-traits = { workspace = true }
clover-rpc-runtime-api = { workspace = true }
evm = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-ethereum = { workspace = true }
fp-rpc = { workspace = true }
fp-evm = { workspace = true }
evm-accounts = { workspace = true }
clover-claims = { workspace = true }
clover-evm-interop = { workspace = true }
clover-primitives = { workspace = true }

enum-iterator = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-election-provider-support = { workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-balances = { workspace = true }
pallet-bounties = { workspace = true }
pallet-collective = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-im-online = { workspace = true }
pallet-indices = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-identity = { workspace = true }
pallet-multisig = { workspace = true }
pallet-offences = { workspace = true }
pallet-preimage = { workspace = true }
pallet-staking = { workspace = true }
pallet-session = { features = ["historical"], workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-vesting = { workspace = true }
serde = { workspace = true, optional = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-democracy = { workspace = true }
pallet-elections-phragmen = { workspace = true }
pallet-tips = { workspace = true }
pallet-treasury = { workspace = true }
pallet-membership = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-utility = { workspace = true }
frame-benchmarking = { workspace = true }

[features]
default = [ 'std' ]
std = [
	"clover-claims/std",
	"clover-evm-interop/std",
	'clover-primitives/std',
	'clover-rpc-runtime-api/std',
	"evm-accounts/std",
	'evm/std',
	"fp-rpc/std",
	"fp-evm/std",
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'log/std',
	'pallet-authority-discovery/std',
	'pallet-authorship/std',
	'pallet-babe/std',
	'pallet-bags-list/std',
	'pallet-balances/std',
	"pallet-collective/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-ethereum/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm/std",
	'pallet-grandpa/std',
	'pallet-identity/std',
	'pallet-im-online/std',
	'pallet-indices/std',
	'pallet-insecure-randomness-collective-flip/std',
	"pallet-membership/std",
	'pallet-multisig/std',
	'pallet-offences/std',
	'pallet-preimage/std',
	"pallet-scheduler/std",
	'pallet-session/std',
	'pallet-staking/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-tips/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	"pallet-treasury/std",
	"pallet-utility/std",
	'pallet-vesting/std',
	'parity-scale-codec/std',
	'scale-info/std',
	'serde',
	'sp-api/std',
	'sp-arithmetic/std',
	'sp-authority-discovery/std',
	'sp-block-builder/std',
	'sp-consensus-babe/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-staking/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
]
clover-testnet = []
clover-mainnet = []

[build-dependencies]
substrate-wasm-builder = { workspace = true }
