[package]
name = "clover-claims"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, optional = true }
parity-scale-codec = { workspace = true }
rustc-hex = { workspace = true }

# substrate frame dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = {  workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

log = { workspace = true }
type-utils = { path = "../type-utils" }
hex-literal = "0.3.1"

[dev-dependencies]
pallet-balances = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ['std']
std = [
    "serde/std",
    "rustc-hex/std",
    "parity-scale-codec/std",
    "log/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]
