[package]
name = "clover-crc20"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true}
parity-scale-codec = { workspace = true }
rustc-hex = { workspace = true }

# substrate frame dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = {  workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

pallet-evm = { workspace = true }

log = { workspace = true }
type-utils = { path = "../type-utils" , default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
hex-literal = { workspace = true }

[features]
default = [ 'std' ]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
